--- a/biocarb21/templates/biocarb21/registrate.html
+++ b/biocarb21/templates/biocarb21/registrate.html
@@ -125,18 +125,18 @@
                 <form action="" method="POST"> 
                     {% csrf_token %} 
                     <div class="form-group form-input">
-                        <!-- <input type="text" name="nombre" id="nombre" class="form-control border-radius input-verde" placeholder="Nombre completo:"> -->
-                        {{ form.nombre }}
+                        <input type="text" name="nombre" id="nombre" class="form-control border-radius input-verde" placeholder="Nombre completo:">
+                        <!-- {{ form.nombre }} -->
                     </div>
 
                     <div class="form-row">
                         <div class="col-md-6 form-input">
-                            <!-- <input type="email" name="email" id="email" class="form-control border-radius input-verde" placeholder="Email:"> -->
-                            {{ form.email }} 
+                            <input type="email" name="email" id="email" class="form-control border-radius input-verde" placeholder="Email:">
+                            <!-- {{ form.email }}  -->
                         </div>
                         <div class="col-md-6">
-                            <!-- <input type="tel" name="telefono" id="telefono" class="form-control border-radius input-verde" placeholder="Teléfono:"> -->
-                            {{ form.telefono}}
+                            <input type="tel" name="telefono" id="telefono" class="form-control border-radius input-verde" placeholder="Teléfono:">
+                            <!-- {{ form.telefono}} -->
                         </div>
                     </div>
                     
