--- a/biocarb21/templates/biocarb21/registrate-2.html
+++ b/biocarb21/templates/biocarb21/registrate-2.html
@@ -148,10 +148,10 @@
                             implementación del Programa Riqueza Natural, conforme a lo dispuesto por la Ley.
                         </p>
 
-<!--                         <div class="mx-auto mb-3 checkbox-acepto">
+                        <div class="mx-auto mb-3 checkbox-acepto">
                             <input type="checkbox" id="acepto" name="acepto" value="acepto" required>
                             <label for="acepto" class="text-white">Acepto términos y condiciones</label><br>
-                        </div> -->
+                        </div>
 
                         <div class="mx-auto text-center">
 <!--                             <button type="button" class="btn mt-2 px-4 boton-rojo border-radius"
